fixes search error alignment

--- a/client/select2.styl
+++ b/client/select2.styl
@@ -4,6 +4,7 @@
 
 .error {
   color: #710F11;
+  text-align: center;
 }
 
 .selectize-input {
